--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-hook-form": "^7.31.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-social-media-embed": "^2.4.1",
     "swiper": "^8.0.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
